added some changes

--- a/app/src/main/res/layout-v26/fragment_about.xml
+++ b/app/src/main/res/layout-v26/fragment_about.xml
@@ -98,12 +98,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:fontFamily="@font/montserrat_medium"
+            android:justificationMode="inter_word"
             android:text="@string/profile_desc"
             android:textSize="@dimen/_11sdp"
             app:layout_constraintEnd_toStartOf="@id/guideline4"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintTop_toBottomOf="@id/title_bappeda" />
+        
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
