--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.InovationMobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.InovationMobile" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/blue_smooth</item>
         <item name="colorPrimaryVariant">@color/header_bg</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -20,5 +20,9 @@
 
     <style name="shapeIcon" parent="ShapeAppearance.Material3.MediumComponent">
         <item name="cornerSize">20%</item>
+    </style>
+
+    <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:fontFamily">@font/monstserrat_semibold</item>
     </style>
 </resources>
