--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -23,14 +23,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="31dp" />
+            app:layout_constraintGuide_percent="0.07" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="16dp" />
+            app:layout_constraintGuide_percent="0.02" />
 
         <TextView
             android:id="@+id/greeting"
@@ -90,79 +90,79 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_inovasi"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_50sdp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_marginStart="@dimen/_12sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:backgroundTint="@color/tr_blue"
             android:clickable="true"
             android:focusable="true"
             app:borderWidth="0dp"
-            app:fabCustomSize="@dimen/_50sdp"
+            app:fabCustomSize="@dimen/_40sdp"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toEndOf="@id/guideline2"
             app:layout_constraintStart_toStartOf="@id/guideline2"
             app:layout_constraintTop_toBottomOf="@id/headerCardImage"
-            app:maxImageSize="@dimen/_30sdp"
+            app:maxImageSize="@dimen/_25sdp"
             app:shapeAppearanceOverlay="@style/shapeIcon"
             app:srcCompat="@drawable/bulb_icon"
             app:tint="@color/blue_smooth" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_inovator"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_50sdp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:backgroundTint="@color/tr_yellow"
             android:clickable="true"
             android:focusable="true"
             app:borderWidth="0dp"
-            app:fabCustomSize="@dimen/_50sdp"
+            app:fabCustomSize="@dimen/_40sdp"
             app:layout_constraintEnd_toStartOf="@id/button_peta"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/button_inovasi"
             app:layout_constraintTop_toBottomOf="@id/headerCardImage"
-            app:maxImageSize="@dimen/_30sdp"
+            app:maxImageSize="@dimen/_25sdp"
             app:shapeAppearanceOverlay="@style/shapeIcon"
             app:srcCompat="@drawable/ic_baseline_group_24"
             app:tint="@color/yellow_smooth" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_peta"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_50sdp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:backgroundTint="@color/tr_green"
             android:clickable="true"
             android:focusable="true"
             app:borderWidth="0dp"
-            app:fabCustomSize="@dimen/_50sdp"
+            app:fabCustomSize="@dimen/_40sdp"
             app:layout_constraintEnd_toStartOf="@id/button_daftar"
             app:layout_constraintHorizontal_bias="0.362"
             app:layout_constraintStart_toEndOf="@id/button_inovator"
             app:layout_constraintTop_toBottomOf="@id/headerCardImage"
-            app:maxImageSize="@dimen/_30sdp"
+            app:maxImageSize="@dimen/_25sdp"
             app:shapeAppearanceOverlay="@style/shapeIcon"
             app:srcCompat="@drawable/ic_baseline_map_24"
             app:tint="@color/green_smooth" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_daftar"
-            android:layout_width="@dimen/_50sdp"
-            android:layout_height="@dimen/_50sdp"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:backgroundTint="@color/tr_red"
             android:clickable="true"
             android:focusable="true"
             app:borderWidth="0dp"
-            app:fabCustomSize="@dimen/_50sdp"
+            app:fabCustomSize="@dimen/_40sdp"
             app:layout_constraintEnd_toStartOf="@id/guideline4"
             app:layout_constraintHorizontal_bias="0.362"
             app:layout_constraintStart_toEndOf="@id/button_peta"
             app:layout_constraintTop_toBottomOf="@id/headerCardImage"
-            app:maxImageSize="@dimen/_30sdp"
+            app:maxImageSize="@dimen/_25sdp"
             app:shapeAppearanceOverlay="@style/shapeIcon"
-            app:srcCompat="@drawable/ic_baseline_map_24"
+            app:srcCompat="@drawable/ic_baseline_app_registration_24"
             app:tint="@color/red_smooth" />
 
         <TextView
