--- a/app/src/main/res/layout/content_latest_layout.xml
+++ b/app/src/main/res/layout/content_latest_layout.xml
@@ -3,19 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="@dimen/_5sdp"
-    >
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:clickable="true"
-        android:focusable="true"
         android:id="@+id/content_latest"
         android:layout_width="match_parent"
-        app:cardBackgroundColor="@color/background"
-        android:layout_height="@dimen/_80sdp"
+        app:cardBackgroundColor="@color/white"
+        app:cardUseCompatPadding="true"
+        android:layout_height="106dp"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="@dimen/_10sdp"
+        app:cardCornerRadius="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -25,74 +22,72 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/card_image"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_60sdp"
-                app:cardCornerRadius="@dimen/_15sdp"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                app:cardCornerRadius="12dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.087"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
+                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:adjustViewBounds="false"
+                    android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0"
-                    android:scaleType="centerCrop"
-                    android:adjustViewBounds="true"
                     app:srcCompat="@drawable/ic_launcher_background" />
 
             </androidx.cardview.widget.CardView>
 
-
             <TextView
                 android:id="@+id/title_inovasi"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:layout_marginStart="28dp"
                 android:fontFamily="@font/monstserrat_semibold"
                 android:text="Placeholder Title text"
                 android:textColor="@color/black"
-                android:layout_marginStart="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:textSize="13sp"
+                app:layout_constraintBottom_toTopOf="@+id/title_inovator"
                 app:layout_constraintStart_toEndOf="@id/card_image"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.188" />
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
                 android:id="@+id/title_inovator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="13dp"
-                android:fontFamily="@font/montserrat_medium"
+                android:layout_marginStart="28dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="Placeholder Person text"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textColor="@color/gray_text"
+                android:textSize="11sp"
+                app:layout_constraintBottom_toTopOf="@+id/title_category"
+                app:layout_constraintEnd_toEndOf="@id/title_inovasi"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@id/card_image"
-                app:layout_constraintTop_toBottomOf="@id/title_inovasi"
-                app:layout_constraintVertical_bias="0.16" />
+                app:layout_constraintTop_toBottomOf="@+id/title_inovasi" />
 
             <TextView
                 android:id="@+id/title_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="13dp"
-                android:fontFamily="@font/montserrat_light"
-                android:text="Placeholder Category text"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp"
+                android:layout_marginStart="28dp"
+                android:fontFamily="@font/montserrat_medium"
+                android:text="Category text"
+                android:textColor="@color/gray_text"
+                android:textSize="9sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintEnd_toEndOf="@id/title_inovator"
+                app:layout_constraintHorizontal_bias="0.01"
                 app:layout_constraintStart_toEndOf="@id/card_image"
-                app:layout_constraintTop_toBottomOf="@id/title_inovator"
-                app:layout_constraintVertical_bias="0.36" />
+                app:layout_constraintTop_toBottomOf="@+id/title_inovator" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
