--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,24 +1,29 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.InovationMobile" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.InovationMobile" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/blue_smooth</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/header_bg</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/header_bg</item>
+        <!--  <item name="android:windowTranslucentStatus" tools:targetApi="l">true</item>-->
         <!-- Customize your theme here. -->
     </style>
 
     <style name="FloatingActionButtonStyle" parent="Widget.Design.FloatingActionButton">
-        <item name="shapeAppearance">@style/shapeIcon</item>
+        <item name="shapeAppearanceOverlay">@style/shapeIcon</item>
     </style>
 
-    <style name="shapeIcon" parent="ShapeAppearance.Material3.SmallComponent">
+    <style name="shapeIcon" parent="ShapeAppearance.Material3.MediumComponent">
         <item name="cornerSize">20%</item>
+    </style>
+
+    <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:fontFamily">@font/monstserrat_semibold</item>
     </style>
 </resources>
