--- a/app/src/main/res/layout/activity_list_inovasi.xml
+++ b/app/src/main/res/layout/activity_list_inovasi.xml
@@ -102,7 +102,7 @@
         app:layout_constraintGuide_percent="0.92" />
 
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -113,7 +113,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/illust_inovator"
+                android:id="@+id/illust_inovasi"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_120sdp"
                 android:adjustViewBounds="true"
@@ -153,7 +153,7 @@
                 app:layout_constraintEnd_toStartOf="@id/search_button_inovasi"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
-                app:layout_constraintTop_toBottomOf="@id/illust_inovator"
+                app:layout_constraintTop_toBottomOf="@id/illust_inovasi"
                 app:tint="@color/black_opacity" />
 
 
@@ -168,24 +168,31 @@
                 app:layout_constraintEnd_toStartOf="@id/search_button_inovasi"
                 app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintStart_toEndOf="@id/icon_list"
-                app:layout_constraintTop_toBottomOf="@id/illust_inovator" />
+                app:layout_constraintTop_toBottomOf="@id/illust_inovasi" />
 
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/search_button_inovasi"
-                android:layout_width="150dp"
-                android:layout_height="40dp"
+                android:layout_width="132dp"
+                android:layout_height="36dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/monstserrat_semibold"
                 android:text="@string/btn_text_inovasi_search"
                 android:textAlignment="center"
+                android:textColor="@color/white"
+                app:shapeAppearanceOverlay="@style/shapeButton"
+                android:backgroundTint="@color/green_smooth"
+                android:elevation="0dp"
                 android:textAllCaps="false"
-                android:textSize="12sp"
-                app:cornerRadius="4dp"
+                android:textSize="11sp"
+                app:iconGravity="textStart"
+                app:iconTint="@color/white"
+                app:iconPadding="5dp"
+                app:iconSize="@dimen/_12sdp"
                 app:icon="@drawable/ic_baseline_youtube_searched_for_24"
                 app:layout_constraintEnd_toEndOf="@id/guideline4"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="@id/guideline2"
-                app:layout_constraintTop_toBottomOf="@id/illust_inovator" />
+                app:layout_constraintTop_toBottomOf="@id/illust_inovasi" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycleViewListInovasi"
@@ -202,6 +209,6 @@
                 app:layout_constraintBottom_toBottomOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
