--- a/app/src/main/res/layout/activity_list_inovator.xml
+++ b/app/src/main/res/layout/activity_list_inovator.xml
@@ -100,7 +100,7 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.92" />
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -168,17 +168,26 @@
                 app:layout_constraintStart_toEndOf="@id/icon_list"
                 app:layout_constraintTop_toBottomOf="@id/illust_inovator" />
 
-            <com.google.android.material.button.MaterialButton
+            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                 android:id="@+id/search_button_inovator"
-                android:layout_width="160dp"
-                android:layout_height="40dp"
+                android:layout_width="139dp"
+                android:layout_height="36dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/monstserrat_semibold"
                 android:text="@string/btn_text_inovator_search"
                 android:textAlignment="center"
+                android:textColor="@color/white"
+                app:shapeAppearanceOverlay="@style/shapeButton"
+                android:backgroundTint="@color/red_smooth"
+                android:elevation="0dp"
+                app:elevation="0dp"
+                app:strokeColor="@color/transparent"
+                app:strokeWidth="0dp"
                 android:textAllCaps="false"
-                android:textSize="12sp"
-                app:cornerRadius="4dp"
+                android:textSize="11sp"
+                app:iconPadding="5dp"
+                app:iconSize="@dimen/_12sdp"
+                app:iconTint="@color/white"
                 app:icon="@drawable/ic_baseline_youtube_searched_for_24"
                 app:layout_constraintEnd_toEndOf="@id/guideline4"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -200,6 +209,6 @@
                 app:layout_constraintBottom_toBottomOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
