--- a/app/src/main/res/layout/content_inovator_layout.xml
+++ b/app/src/main/res/layout/content_inovator_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/content_latest"
+        android:id="@+id/content_inovator"
         android:layout_width="match_parent"
         app:cardBackgroundColor="@color/white"
         app:cardUseCompatPadding="true"
@@ -31,48 +31,48 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                 <ImageView
+                <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:adjustViewBounds="false"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0"
-                    app:srcCompat="@drawable/ic_launcher_background" />
+                    app:srcCompat="@drawable/dump_image_inovator" />
 
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/title_inovasi"
-                android:layout_width="wrap_content"
+                android:id="@+id/nama_inovator"
+                android:layout_width="170dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="28dp"
                 android:fontFamily="@font/monstserrat_semibold"
-                android:text="Placeholder Title text"
+                android:text="Wirda Ningsih"
                 android:textColor="@color/black"
-                android:textSize="13sp"
-                app:layout_constraintBottom_toTopOf="@+id/title_inovator"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toTopOf="@+id/alamat_inovator"
                 app:layout_constraintStart_toEndOf="@id/card_image"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
-                android:id="@+id/title_inovator"
+                android:id="@+id/alamat_inovator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="Placeholder Person text"
+                android:text="Dramaga"
                 android:textColor="@color/gray_text"
                 android:textSize="11sp"
                 app:layout_constraintBottom_toTopOf="@+id/title_category"
-                app:layout_constraintEnd_toEndOf="@id/title_inovasi"
+                app:layout_constraintEnd_toEndOf="@id/nama_inovator"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@id/card_image"
-                app:layout_constraintTop_toBottomOf="@+id/title_inovasi" />
+                app:layout_constraintTop_toBottomOf="@+id/nama_inovator" />
 
             <TextView
                 android:id="@+id/title_category"
@@ -80,14 +80,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="28dp"
                 android:fontFamily="@font/montserrat_medium"
-                android:text="Category text"
+                android:text="Kategori:   Warga Biasa"
                 android:textColor="@color/gray_text"
                 android:textSize="9sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/title_inovator"
+                app:layout_constraintEnd_toEndOf="@id/alamat_inovator"
                 app:layout_constraintHorizontal_bias="0.01"
                 app:layout_constraintStart_toEndOf="@id/card_image"
-                app:layout_constraintTop_toBottomOf="@+id/title_inovator" />
+                app:layout_constraintTop_toBottomOf="@+id/alamat_inovator" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
