--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -83,7 +83,7 @@
                 app:sliderIndicatorOrientation="horizontal"
                 app:sliderIndicatorPadding="3dp"
                 app:sliderIndicatorRadius="2dp"
-                app:sliderIndicatorSelectedColor="@color/yellow_smooth"
+                app:sliderIndicatorSelectedColor="@color/green_smooth"
                 app:sliderIndicatorUnselectedColor="#FFF" />
         </com.google.android.material.card.MaterialCardView>
 
@@ -91,7 +91,7 @@
             android:id="@+id/button_inovasi"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:layout_marginStart="@dimen/_12sdp"
+            android:layout_marginStart="@dimen/_33sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:backgroundTint="@color/tr_green"
             android:clickable="true"
@@ -131,21 +131,21 @@
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
             android:layout_marginTop="@dimen/_20sdp"
-            android:backgroundTint="@color/tr_blue"
+            android:backgroundTint="@color/tr_yellow"
             android:clickable="true"
             android:focusable="true"
             app:borderWidth="0dp"
             app:fabCustomSize="@dimen/_40sdp"
-            app:layout_constraintEnd_toStartOf="@id/button_daftar"
+            app:layout_constraintEnd_toStartOf="@id/guideline4"
             app:layout_constraintHorizontal_bias="0.362"
             app:layout_constraintStart_toEndOf="@id/button_inovator"
             app:layout_constraintTop_toBottomOf="@id/headerCardImage"
             app:maxImageSize="@dimen/_25sdp"
             app:shapeAppearanceOverlay="@style/shapeIcon"
             app:srcCompat="@drawable/ic_baseline_map_24"
-            app:tint="@color/blue_smooth" />
+            app:tint="@color/yellow_smooth" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+       <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_daftar"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
@@ -162,7 +162,7 @@
             app:maxImageSize="@dimen/_25sdp"
             app:shapeAppearanceOverlay="@style/shapeIcon"
             app:srcCompat="@drawable/ic_baseline_app_registration_24"
-            app:tint="@color/yellow_smooth" />
+            app:tint="@color/yellow_smooth" />-->
 
         <TextView
             android:id="@+id/mn_inovasi"
@@ -171,6 +171,7 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="@string/Inovasi_mn"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="@id/button_inovasi"
             app:layout_constraintStart_toStartOf="@id/button_inovasi"
@@ -183,6 +184,7 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="@string/Inovator_mn"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="@id/button_inovator"
             app:layout_constraintStart_toStartOf="@id/button_inovator"
@@ -195,22 +197,24 @@
             android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="@string/Peta_mn"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="@id/button_peta"
             app:layout_constraintStart_toStartOf="@id/button_peta"
             app:layout_constraintTop_toBottomOf="@id/button_peta" />
 
-        <TextView
+       <!-- <TextView
             android:id="@+id/mn_daftar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_8sdp"
             android:fontFamily="@font/montserrat_medium"
             android:text="@string/Pendaftaran_mn"
+            android:textSize="@dimen/_10sdp"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="@id/button_daftar"
             app:layout_constraintStart_toStartOf="@id/button_daftar"
-            app:layout_constraintTop_toBottomOf="@id/button_daftar" />
+            app:layout_constraintTop_toBottomOf="@id/button_daftar" />-->
 
         <TextView
             android:id="@+id/latest_inovasi"
